18_reverse_str/grade.txt
Grading at Sun Aug 18 03:31:33 UTC 2019
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:16:16: error: zero-length gnu_printf format string [-Werror=format-zero-length]
   else{ printf("");}
                ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
